fixed author img width on mobile

--- a/less/clean-blog.less
+++ b/less/clean-blog.less
@@ -527,6 +527,7 @@ body {
 			position: absolute;
 			top: 0px;
 			left: 25%;
+			width: 150px;
 		}
   }
   .author-desc {
